--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "bempug": "^1.1.1",
     "core-js": "^3.6.4",
+    "import-glob-loader": "^1.1.0",
+    "pug-plain-loader": "^1.0.0",
+    "svg-sprite-loader": "^4.2.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
@@ -17,8 +21,9 @@
     "@vue/cli-plugin-router": "^4.2.0",
     "@vue/cli-plugin-vuex": "^4.2.0",
     "@vue/cli-service": "^4.2.0",
+    "pug": "^2.0.4",
     "sass": "^1.25.0",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
