--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.10.4",
     "bempug": "^1.1.1",
     "core-js": "^3.6.4",
     "import-glob-loader": "^1.1.0",
